TPCM/Nat-Instr/WINDECL.H



void _far _pascal GotoMultAddr(int boardID,
                              unsigned short type,
                              unsigned short (_far *addrfunc)(),
                              unsigned short (_far *spollfunc)());