GPIB_lang_interfaces/Delphi/GPIB.PAS


  ValidEOI  = $80;
  ValidATN  = $40;
  ValidSRQ  = $20;
  ValidREN  = $10;
  ValidIFC  = $8;
  ValidNRFD = $4;
  ValidNDAC = $2;
  ValidDAV  = $1;
  BusEOI    = $8000;
  BusATN    = $4000;
  BusSRQ    = $2000;
  BusREN    = $1000;
  BusIFC    = $800;
  BusNRFD   = $400;
  BusNDAC   = $200;
  BusDAV    = $100;

  (* This value is used to terminate an address list.  It should be
   assigned to the last entry.  (488.2) *)

  NOADDR = -1;

type

  (* Address types (for 488.2 calls) *)
  AddrList4882_t  = array[0..31] of smallint;
  Addr4882_t      = smallint;

  (* ibnotify callback function prototype *)
  GpibNotifyCallback_t = function(ud:integer;localibsta:integer;localiberr:integer;localibcnt:longint;data:string):integer;stdcall;

function loadDLL:integer;stdcall;
function FreeDLL:integer;stdcall;

function ibsta:integer;stdcall;
function iberr:integer;stdcall;
function ibcnt:integer;stdcall;
function ibcntl:longint;stdcall;

function ibask(ud:integer;option:integer;var value:integer):integer;stdcall;
function ibcac(ud:integer;value:integer):integer;stdcall;
function ibclr(ud:integer):integer;stdcall;
function ibcmd(ud:integer;cmdbuf:string;count:longint):integer;stdcall;
function ibcmda(ud:integer;cmdbuf:string;count:longint):integer;stdcall;
function ibconfig(ud:integer;option:integer;value:integer):integer;stdcall;
function ibdev(ud:integer;pad:integer;sad:integer;tmo:integer;eot:integer;eos:integer):integer;stdcall;
function ibdma(ud:integer;value:integer):integer;stdcall;
function ibeos(ud:integer;value:integer):integer;stdcall;
function ibeot(ud:integer;value:integer):integer;stdcall;
function ibfind(udname:string):integer;stdcall;
function ibgts(ud:integer;value:integer):integer;stdcall;
function ibist(ud:integer;value:integer):integer;stdcall;
function iblck(ud:integer;value:integer;timeout:integer;reserved:string):integer;stdcall;
function iblines(ud:integer;var clines:smallint):integer;stdcall;
function ibln(ud:integer;pad:integer;sad:integer;var listen:smallint):integer;stdcall;
function ibloc(ud:integer):integer;stdcall;
function ibonl(ud:integer;value:integer):integer;stdcall;
function ibnotify(ud:integer;mask:integer;callback:GpibNotifyCallback_t;data:string):integer;stdcall;
function ibpad(ud:integer;value:integer):integer;stdcall;
function ibpct(ud:integer):integer;stdcall;
function ibppc(ud:integer;value:integer):integer;stdcall;
function ibrd(ud:integer;var rdbuf;count: Longint):integer;stdcall;
function ibrda(ud:integer;var rdbuf;count:Longint):integer;stdcall;
function ibrdf(ud:integer;filename:string):integer;stdcall;
function ibrpp(ud:integer;var ppr:smallint):integer;stdcall;
function ibrsc(ud:integer;value:integer):integer;stdcall;
function ibrsp(ud:integer;var spr:smallint):integer;stdcall;
function ibrsv(ud:integer;value:integer):integer;stdcall;
function ibsad(ud:integer;value:integer):integer;stdcall;
function ibsic(ud:integer):integer;stdcall;
function ibsre(ud:integer;value:integer):integer;stdcall;
function ibstop(ud:integer):integer;stdcall;
function ibtmo(ud:integer;value:integer):integer;stdcall;
function ibtrg(ud:integer):integer;stdcall;
function ibwait(ud:integer;mask:integer):integer;stdcall;
function ibwrt(ud:integer;wrtbuf:string;count:longint):integer;stdcall;
function ibwrta(ud:integer;wrtbuf:string;count:Longint):integer;stdcall;
function ibwrtf(ud:integer;filename:string):integer;stdcall;

procedure AllSpoll(boardID:integer;addrlist:AddrList4882_t;var resultlist:AddrList4882_t);stdcall;
procedure DevClear(boardID:integer;address:Addr4882_t);stdcall;
procedure DevClearList(boardID:integer;var addrlist:AddrList4882_t);stdcall;
procedure EnableLocal(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure EnableRemote(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure FindLstn(boardID:integer;var padlist:AddrList4882_t;var resultlist:AddrList4882_t;limit:integer);stdcall;
procedure FindRQS(boardID:integer;addrlist:AddrList4882_t;var result:Addr4882_t);stdcall;
procedure PassControl(boardID:integer;address:Addr4882_t);stdcall;
procedure PPoll(boardID:integer;var result:smallint);stdcall;
procedure PPollConfig(boardID:integer;address:Addr4882_t;dataline:integer;linesend:integer);stdcall;
procedure PPollUnconfig(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure RcvRespMsg(boardID:integer;var buffer;count:longint;termination:integer);stdcall;
procedure ReadStatusByte(boardID:integer;address:Addr4882_t;var result:smallint);stdcall;
procedure Receive(boardID:integer;address:Addr4882_t;var buffer;count:longint;termination:integer);stdcall;
procedure ReceiveSetup(boardID:integer;address:Addr4882_t);stdcall;
procedure ResetSys(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure Send(boardID:integer;address:Addr4882_t;buffer:string;count:longint;eotmode:integer);stdcall;
procedure SendCmds(boardID:integer;buffer:string;count:longint);stdcall;
procedure SendDataBytes(boardID:integer;buffer:string;count:longint;eot:integer);stdcall;
procedure SendIFC(boardID:integer);stdcall;
procedure SendList(boardID:integer;addrlist:AddrList4882_t;buffer:string;count:longint;eotmode:integer);stdcall;
procedure SendLLO(boardID:integer);stdcall;
procedure SendSetup(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure SetRWLS(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure TestSRQ(boardID:integer;var result:smallint);stdcall;
procedure TestSys(boardID:integer;addrlist:AddrList4882_t;var resultlist);stdcall;
procedure Trigger(boardID:integer;address:Addr4882_t);stdcall;
procedure TriggerList(boardID:integer;addrlist:AddrList4882_t);stdcall;
procedure WaitSRQ(boardID:integer;var result:smallint);stdcall;

function ThreadIbsta:integer;stdcall;
function ThreadIberr:integer;stdcall;
function ThreadIbcnt:integer;stdcall;
function ThreadIbcntl:longint;stdcall;

implementation

type

  (* Type declarations for exported GPIB Global Variables.           *)
  Tibsta          =  function                    : integer; stdcall;
  Tiberr          =  function                    : integer; stdcall;
  Tibcnt          =  function                    : integer; stdcall;
  Tibcntl         =  function                    : longint; stdcall;

 (* Type declarations for exported GPIB functions.                    *)
  Tibask          =  function (ud : integer;
                              option : integer;
                              var value : integer) : integer; stdcall;
  Tibcac          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibclr          =  function (ud : integer)     : integer; stdcall;
  Tibcmd          =  function (ud : integer;
                              cmdbuf : string;
                              count : longint)   : integer; stdcall;
  Tibcmda         =  function (ud : integer;
                              cmdbuf : string;
                              count : longint)   : integer; stdcall;
  Tibconfig       =  function (ud : integer;
                              option : integer;
                              value : integer)   : integer; stdcall;
  Tibdev          =  function (ud:  integer;
                              pad: integer;
                              sad: integer;
                              tmo: integer;
                              eot: integer;
                              eos: integer)      : integer; stdcall;
  Tibdma          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibeos          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibeot          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  TibfindA        =  function (udname : string)  : integer; stdcall;
  Tibgts          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibist          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tiblck          =  function (ud       : integer;
                               value    : integer;
                               timeout  : integer;
                               reserved : string) : integer; stdcall;
  Tiblines        =  function (ud : integer;
                              var clines : smallint) : integer; stdcall;
  Tibln           =  function (ud : integer;
                              pad : integer;
                              sad : integer;
                              var listen : smallint) : integer; stdcall;
  Tibloc          =  function (ud : integer)     : integer; stdcall;
  Tibonl          =  function (ud: integer;
                              value:  integer)   : integer; stdcall;
  Tibnotify       =  function (ud       : integer;
                               mask     : integer;
                               callback : GpibNotifyCallback_t;
                               data     : string) : integer; stdcall;
  Tibpad          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibpct          =  function (ud : integer)     : integer; stdcall;
  Tibppc          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibrd           =  function (ud:  integer;
                              var  rdbuf;
                              count: Longint)    : integer; stdcall;
  Tibrda          =  function (ud : integer;
                              var rdbuf;
                              count : Longint)   : integer; stdcall;
  TibrdfA         =  function (ud : integer;
                              filename : string) : integer; stdcall;
  Tibrpp          =  function (ud : integer;
                               var ppr : short)    : integer; stdcall;
  Tibrsc          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibrsp          =  function (ud : integer;
                              var spr: short)     : integer; stdcall;
  Tibrsv          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibsad          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibsic          =  function (ud : integer)     : integer; stdcall;
  Tibsre          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibstop         =  function (ud : integer)     : integer; stdcall;
  Tibtmo          =  function (ud : integer;
                              value : integer)   : integer; stdcall;
  Tibtrg          =  function (ud : integer)     : integer; stdcall;
  Tibwait         =  function (ud:   integer;
                              mask: integer)     : integer; stdcall;
  Tibwrt          =  function (ud:  integer;
                              wrtbuf : string;
                              count: longint)      : integer; stdcall;
  Tibwrta         =  function (ud : integer;
                              wrtbuf : string;
                              count : Longint)   : integer; stdcall;
  TibwrtfA        =  function (ud : integer;
                              filename : string) : integer; stdcall;
